# TQP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
docs/: ROADMAP.md  TQP_Integrated_Specification.md  TQP_Integrated_Specification_3.4.md  TQP_v3.4_Unified_Upgrade_Plan.md
docs/prx/: README.md
docs/prx/arxiv/: README.md  TQP_PRX.tex  references.bib
docs/prx/paper/: TQP_PRX.tex  draft_v1.md
scripts/: benchmark_report.html  benchmark_report.py
scripts/ibm/: generate_beh2_4qubit.py  generate_beh2_openfermion.py  generate_h2_hamiltonian.py  h2_2qubit_test.py  ibm_beh2_result.json  qiskit_nature_h2.py  run_h2_2qubit_ibm.py  run_h2_simple.py  run_h2_statistical.py  run_h2_test.py  run_ibm_beh2.py  test_endian.py  test_hf_patterns.py  verify_hamiltonian.py
scripts/pyscf/: beh2_casscf.py  beh2_integrals.npz  extract_hamiltonian.py  validate_fci.py
tqp-algorithms/: Cargo.toml
tqp-algorithms/src/: chrono_loop.rs  lib.rs
tqp-algorithms/tests/: optimizer_test.rs
tqp-benchmark/: Cargo.toml  extended_benchmark_results.json  qiskit_benchmark_results.json
tqp-benchmark/benches/: comparison_bench.rs  statevector_bench.rs
tqp-benchmark/data/: qiskit_fair_benchmark.csv
tqp-benchmark/scripts/: fair_benchmark.py  run_extended_benchmark.py  run_qiskit_benchmark.py  visualize_benchmark.py  visualize_timebin.py
tqp-benchmark/src/: lib.rs  memory.rs  report.rs  statevector.rs  temporal_scaling.rs  vqe_benchmark.rs
tqp-core/: Cargo.toml  README.md
tqp-core/benches/: inplace_bench.rs  performance_bench.rs
tqp-core/src/: autodiff.rs  barren_plateau.rs  chunk_strategy.rs  dispatcher.rs  error_mitigation.rs  gradient_cache.rs  gradient_tape.rs  h2_hamiltonian.rs  hardware.rs  inplace.rs  layerwise.rs  lib.rs  maxcut.rs  measurement_mitigation.rs  memory.rs  memory_policy.rs  noise.rs  noise_model.rs  ops.rs  ops_simd.rs  optimizer.rs  parallel_sparse.rs  pulse.rs  qaoa_ansatz.rs  qaoa_solver.rs  qng.rs  scheduler.rs  simd_avx2.rs  sparse.rs  sparse_ops.rs  state.rs  uccsd.rs  vqe_simulation.rs  zne.rs
tqp-core/src/layers/: deeplogic.rs  fastmux.rs  mod.rs
tqp-core/tests/: bench_ops.rs  integration_test.rs  physics_test.rs  pruner_test.rs  temporal_os_test.rs  tensor_test.rs  week1_integration.rs  week2_day1_integration.rs  week2_day2_integration.rs  week2_day3_integration.rs  week2_day4_integration.rs  week3_day1_integration.rs  week3_day5_integration.rs
tqp-ibm/: Cargo.toml  README.md
tqp-ibm/docs/: hardware_validation_report.md  lih_validation_report.md
tqp-ibm/examples/_legacy/: benchmark_runner.rs  estimator_lih.rs  hw_validation.rs  vqe_h2_hardware.rs
tqp-ibm/src/: backend.rs  beh2_verification.rs  benchmark.rs  bridge.rs  credentials.rs  error.rs  error_mitigation_hw.rs  estimator.rs  jobs.rs  lib.rs  qaoa.rs  readout_mitigation.rs  transpiler.rs  vqe.rs  vqe_correlation.rs
tqp-ibm/tests/: test_estimator_api.py
tqp-py/: Cargo.toml  README.md  test_tqp.py
tqp-py/examples/: qaoa_demo.py  vqe_demo.py
tqp-py/src/: lib.rs
