[package]
name = "tqp-benchmark"
version = "3.4.0"
edition = "2021"
authors = ["Jung Wook Yang <sadpig70@gmail.com>"]
description = "Benchmark suite for TQP quantum simulator - PRX paper validation"
license = "MIT"
repository = "https://github.com/sadpig70/TQP"
keywords = ["quantum", "benchmark", "simulation", "performance"]

[dependencies]
tqp-core = { path = "../tqp-core" }
tqp-ibm = { path = "../tqp-ibm" }

# 벤치마크 및 측정
criterion = { version = "0.5", features = ["html_reports"] }

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 시간 및 리포트
chrono = "0.4"

# 메모리 측정
memory-stats = "1.0"

# 수치 연산 (게이트 행렬)
ndarray = "0.15"
num-complex = "0.4"

# CLI (옵션)
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
cli = ["clap"]

[[bench]]
name = "statevector_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false


