[package]
name = "tqp-ibm"
version = "1.2.0"
edition = "2021"
authors = ["Jung Wook Yang <sadpig70@gmail.com>"]
description = "IBM Quantum backend integration for TQP framework"
license = "MIT"
repository = "https://github.com/sadpig70/TQP"
keywords = ["quantum", "ibm", "qiskit", "vqe", "qaoa"]
categories = ["science", "simulation"]

[dependencies]
# TQP Core
tqp-core = { version = "1.2.0", path = "../tqp-core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client (rustls only, no OpenSSL dependency)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging
log = "0.4"
env_logger = "0.10"

# UUID for job IDs
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random (optional, for mock feature)
rand = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"

[features]
default = []
mock = ["rand"]   # Mock backend for testing without IBM credentials
async = []  # Enable async hardware execution functions
