[package]
name = "tqp"
version = "3.4.0"
edition = "2021"
authors = ["Jung Wook Yang <sadpig70@gmail.com>"]
description = "Python bindings for TQP"
license = "MIT"
repository = "https://github.com/sadpig70/TQP"

[lib]
name = "tqp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module", "num-complex"] }
tqp-core = { path = "../tqp-core" }
num-complex = "0.4"
ndarray = "0.15"
